--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ table {
 /*               End of Setup             */
 
 .navBar, .mainPage, .moreInfo, div{
-  max-width: 100%;
-  margin: 5px 0 5px;
+  max-width: 1100px;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -138,10 +138,9 @@ table {
 .col-3{
   display: inline-block;
   width: 25%;
-  padding: 50px;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 100%;
+  height: 150px;
 }
 
 #watch{
@@ -170,10 +169,9 @@ table {
 
 .footer{
   text-align: center;
-  max-width: 100%;
+  max-width: 1100px;
   background-color: rgb(240,240,240);
-  padding-left: 30%;
-  padding-right: 25%;
+  margin: 0 auto;
 }
 
 .col{
