--- a/style.css
+++ b/style.css
@@ -77,14 +77,14 @@ table {
 }
 /*               End of Setup             */
 
+nav{
+   background-color: rgb(3,3,3);
+}
+
 .navBar, .mainPage, .moreInfo, div{
   max-width: 1100px;
   margin: 0 auto;
   text-align: center;
-}
-
-.navBar {
-  background-color: rgb(3,3,3);
 }
 
 .navBarIcon{
@@ -167,10 +167,13 @@ table {
   text-align: center;
 }
 
+footer{
+   background-color: rgb(240,240.240);
+}
+
 .footer{
   text-align: center;
   max-width: 1100px;
-  background-color: rgb(240,240,240);
   margin: 0 auto;
 }
 
